[package]
name = "wap-img"
version = "0.1.0"
authors = ["fzzr <a@koz.email>"]
edition = "2018"

[features]
default = ["image"]

[dependencies]
zero = "0.1.2"
wap-res = { path = "../res" }
wap-utils = { path = "../utils" }
image = { version = "0.20.0", features = ["png_codec"], default-features = false, optional = true }

[dev-dependencies]
image = "0.20.0"
