[package]
name = "wap-res"
version = "0.1.0"
authors = ["fzzr <a@koz.email>"]
edition = "2018"

[features]
default = [ "fxhash" ]
fxhash = [ "wap-common/fxhash" ]

[dependencies]
zero = "0.1.2"
# futures = { version = "0.1.25", optional = true }
# TODO: maybe smallvec too
wap-common = { path = "../common" }
